[tool.poetry]
name = "python-ascendex"
version = "0.1.1"
description = "Python API for AscendEx"
authors = ["Jan Skoda <skoda@jskoda.cz>"]
license = "MIT"
packages = [
    {include = "ascendex"}
]

[tool.poetry.dependencies]
python = "^3.8"
aiosonic = "^0.12.0"
websockets = "^9.1"
ujson = "^4.0.2"
chardet = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
